@@ -10,6 +10,11 @@ if (!$ok) throw new WFException("Error registering WFIncluding::autoload()");
 // This version number should be updated with each release - this version number, among other things, is used to construct version-unique URLs for static resources
 // thus anytime anything in wwwroot/www/framework changes, this should be bumped. This version string should match [0-9\.]*
 define('PHOCOA_VERSION', '0.3.9');
+// PHOCOA shows all deprecation notices by default in wf.log on non-production hosts.
+if (!defined('WF_LOG_DEPRECATED'))
+{
+    define('WF_LOG_DEPRECATED', !IS_PRODUCTION);
+}
 
 require('framework/WFLog.php');    // need this for the PEAR_LOG_* constants below, which can't autoload.
 if (IS_PRODUCTION)
